Hotfix, disabled check read for now